RooCode Not Working

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-evdev>=1.6.0
-pynput>=1.7.0
-anthropic>=0.7.0
+pillow>=11.2.1
+pystray>=0.19.5
+pygments>=2.19.1
 openai>=1.0.0
-Pillow>=10.0.0
-pygments>=2.14.0
-PyGObject>=3.42.0
+anthropic>=0.52.2
+python-xlib>=0.29
+setuptools>=67.0.0
